2019-08-19  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config/riscv/riscv.h (REG_CLASS_CONTENTS): Update SIBCALL_REGS.

2019-08-19  Kito Cheng  <kito.cheng@sifive.com>

	PR target/91441
	* toplev.c (process_options): Check TARGET_ASAN_SHADOW_OFFSET is
	implemented for -fsanitize=kernel-address, and merge check logic
	with -fsanitize=address.

2019-08-18  Iain Sandoe  <iain@sandoe.co.uk>

	* config/rs6000/darwin.h (TARGET_OS_CPP_BUILTINS): Add asserts
	for cpu and machine.  Factor 64/32b builtins.

2019-08-18  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (Specific, bfin): blackfin.uclinux.org is
	gone, point to sourceforge.net.

2019-08-17  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* doc/ux.texi (User Experience Guidelines): Update reference.

2019-08-17  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* doc/include/gpl_v3.texi (Copying): Adjust the link to "Why
	not LGPL".

2019-08-16  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-sra.c (build_reconstructed_reference): Return NULL_TREE instead
	of NULL.  Add guard for broken VIEW_CONVERT_EXPRs.

2019-08-16  Martin Sebor  <msebor@redhat.com>

	* tree.def (TYPE_SIZE): Clarify.
	* tree.h (TYPE_SIZE, TYPE_SIZE_UNIT, DECL_SIZE): Add comments.

2019-08-16  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR tree-optimization/91109
	* lra-int.h (lra_need_for_scratch_reg_p): Declare.
	* lra.c (lra): Use lra_need_for_scratch_reg_p.
	* lra-spills.c (lra_need_for_scratch_reg_p): New function.

2019-08-16  Uroš Bizjak  <ubizjak@gmail.com>

	* config/i386/mmx.md (mmxdoublemode): New mode attribute.
	(mmx_uavg<mode>3): Macroize expaner from mmx_uavgv8qi3 and
	mmx_uavgv4hi3 using MMXMODE12 mode iterator.
	(uavg<mode>3_ceil): New expander.
	* config/i386/sse.md (uavg<mode>3_ceil): Use ssedoublemode
	mode iterator when creating CONST1_RTX.
	(<sse2_avx2>_uavg<mode>3<mask_name>): Ditto.
	(*<sse2_avx2>_uavg<mode>3<mask_name>): Use ssedoublemode
	mode iterator for const1_operand predicate.
