@@ -1,4 +1,14 @@
-2019-08-01  Kito Cheng  <kito.cheng@sifive.com>
+2019-08-19  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gcc.target/riscv/save-restore-2.c: New file.
+	* gcc.target/riscv/save-restore-3.c: New file.
+	* gcc.target/riscv/save-restore-4.c: New file.
+	* gcc.target/riscv/save-restore-5.c: New file.
+	* gcc.target/riscv/save-restore-6.c: New file.
+	* gcc.target/riscv/save-restore-7.c: New file.
+	* gcc.target/riscv/save-restore-8.c: New file.
+
+2019-08-19  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.target/riscv/attribute-10.c: Fix testcase on rv64.
 
